static/css/base.css
/* Body */
body {
    margin: 0;
    line-height: 1.5em;
    color: #333333;
    font-family: helvetica, arial, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0;
    line-height: 1.5em;
}

a:link, a:visited {
    color: #0000e0;
    text-decoration: none
}

a:hover, a:active {
    color: #0000ff;
    text-decoration: underline
}

nav div, header, main, footer div {
    max-width: 40em;
    margin-left: auto;
    margin-right: auto;
    padding: 0 0.5em;
}

hr {
    border: none;
    border-bottom: thin solid #cccccc;
}


/* Navigation */
nav {
    background: #333333;
    border-bottom: thin solid #111111;
    text-transform: uppercase;
    line-height: 2em;
    margin-bottom: 2em;
}

nav a {
    margin-right: 1em;
}

nav a:link, nav a:visited {
    color: #cccccc;
}

nav a:hover, nav a:active {
    color: #ffffff;
}


/* Header */
header img:hover {
    opacity: 0.8;
}

header img {
    width: 75px;
    vertical-align: middle;
}

header span {
    font-size: 50px;
    vertical-align: middle;
    position: relative;
}

header a:link, header a:visited {
    color: #333333;
    text-decoration: none
}

header a:hover, header a:active {
    color: #555555;
    text-decoration: none
}


/* Footer */
footer {
    background: #f0f0f0;
    border-top: thin solid #e0e0e0;
    margin-top: 1em;
    padding-top: 2em;
    padding-bottom: 1em;
}

footer .links a {
    margin-right: 1em;
    font-size: 0.7em;
}


/* Posts */
.posts h2 a:link, .posts h2 a:visited, 
.post h1 a:link, .post h1 a:visited {
    color: #333333;
}

.posts h2 a:hover, .posts h2 a:active, 
.post h1 a:hover, .post h1 a:active {
    color: #555555; 
    text-decoration: none;
}

.post .date {
    font-size: 0.8em;
}

